fix: update resolution API