@@ -17,6 +17,10 @@
  */
 package org.opensearch.plugin.zentity;
 
+import io.zentity.common.Json;
+import io.zentity.model.ValidationException;
+import org.apache.logging.log4j.Logger;
+import org.opensearch.OpenSearchException;
 import org.opensearch.OpenSearchSecurityException;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
 import org.opensearch.cluster.node.DiscoveryNodes;
@@ -24,6 +28,10 @@ import org.opensearch.common.settings.ClusterSettings;
 import org.opensearch.common.settings.IndexScopedSettings;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.common.settings.SettingsFilter;
+import org.opensearch.core.rest.RestStatus;
+import org.opensearch.core.xcontent.XContentBuilder;
+import org.opensearch.rest.BytesRestResponse;
+import org.opensearch.rest.RestChannel;
 import org.opensearch.rest.RestController;
 import org.opensearch.rest.RestHandler;
 import org.opensearch.plugins.ActionPlugin;
@@ -31,12 +39,11 @@ import org.opensearch.plugins.Plugin;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 import java.util.function.Supplier;
 
-// Exception classes needed by other components
 class NotFoundException extends Exception {
     public NotFoundException(String message) {
         super(message);
@@ -50,7 +57,7 @@ class NotImplementedException extends Exception {
 }
 
 class ForbiddenException extends OpenSearchSecurityException {
-    ForbiddenException(String message) {
+    public ForbiddenException(String message) {
         super(message);
     }
 }
@@ -88,48 +95,83 @@ public class ZentityPluginMinimal extends Plugin implements ActionPlugin {
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<DiscoveryNodes> nodesInCluster) {
         
-        return List.of(
-            new HomeAction(),
-            new ModelsAction(),
-            new ResolutionAction()
+        // Return all REST handlers including ResolutionAction
+        return Arrays.asList(
+                new HomeAction(),
+                new ModelsAction(),
+                new ResolutionAction(),
+                new SetupAction()
         );
     }
     
-    // Static utility methods for response handling
-    public static void sendResponse(org.opensearch.rest.RestChannel channel, String content) {
+    /**
+     * Return an error response through a RestChannel.
+     * This method is used by the action classes in org.opensearch.plugin.zentity.
+     *
+     * @param channel The REST channel to return the response through.
+     * @param logger  The logger to use for logging errors.
+     * @param e       The exception object to process and return.
+     */
+    protected static void sendResponseError(RestChannel channel, Logger logger, Exception e) {
         try {
-            channel.sendResponse(new org.opensearch.rest.BytesRestResponse(org.opensearch.core.rest.RestStatus.OK, "application/json", content));
-        } catch (Exception e) {
-            sendResponseError(channel, org.apache.logging.log4j.LogManager.getLogger(ZentityPluginMinimal.class), e);
-        }
-    }
-    
-    public static void sendResponse(org.opensearch.rest.RestChannel channel, org.opensearch.core.xcontent.XContentBuilder content) {
-        try {
-            channel.sendResponse(new org.opensearch.rest.BytesRestResponse(org.opensearch.core.rest.RestStatus.OK, content));
-        } catch (Exception e) {
-            sendResponseError(channel, org.apache.logging.log4j.LogManager.getLogger(ZentityPluginMinimal.class), e);
-        }
-    }
-    
-    public static void sendResponseError(org.opensearch.rest.RestChannel channel, org.apache.logging.log4j.Logger logger, Exception e) {
-        try {
-            org.opensearch.core.rest.RestStatus status = org.opensearch.core.rest.RestStatus.INTERNAL_SERVER_ERROR;
-            
-            // Map specific exception types to appropriate HTTP status codes
-            if (e instanceof NotFoundException) {
-                status = org.opensearch.core.rest.RestStatus.NOT_FOUND;
-            } else if (e instanceof ForbiddenException) {
-                status = org.opensearch.core.rest.RestStatus.FORBIDDEN;
+            // Handle known types of errors.
+            if (e instanceof ForbiddenException) {
+                channel.sendResponse(new BytesRestResponse(RestStatus.FORBIDDEN, e.getMessage()));
+            } else if (e instanceof ValidationException) {
+                channel.sendResponse(new BytesRestResponse(RestStatus.BAD_REQUEST, e.getMessage()));
+            } else if (e instanceof NotFoundException) {
+                channel.sendResponse(new BytesRestResponse(RestStatus.NOT_FOUND, e.getMessage()));
             } else if (e instanceof NotImplementedException) {
-                status = org.opensearch.core.rest.RestStatus.NOT_IMPLEMENTED;
-            } else if (e instanceof io.zentity.model.ValidationException) {
-                status = org.opensearch.core.rest.RestStatus.BAD_REQUEST;
+                channel.sendResponse(new BytesRestResponse(RestStatus.NOT_IMPLEMENTED, e.getMessage()));
+            } else if (e instanceof OpenSearchException) {
+                // Any other OpenSearchException which has its own status code.
+                channel.sendResponse(new BytesRestResponse(((OpenSearchException) e).status(), e.getMessage()));
+            } else {
+                // Log the stack trace for unexpected types of errors.
+                logger.catching(e);
+                channel.sendResponse(new BytesRestResponse(RestStatus.INTERNAL_SERVER_ERROR, e.getMessage()));
             }
-            
-            channel.sendResponse(new org.opensearch.rest.BytesRestResponse(status, e.getMessage()));
-        } catch (Exception sendException) {
-            logger.error("Failed to send error response", sendException);
+        } catch (Exception ee) {
+            // Unexpected error when processing the exception object.
+            // Since BytesRestResponse throws IOException, build this response object as a string
+            // to handle any IOException that find its way here.
+            logger.catching(ee);
+            String message = "{\"error\":{\"root_cause\":[{\"type\":\"exception\",\"reason\":" + Json.quoteString(ee.getMessage()) + "}],\"type\":\"exception\",\"reason\":" + Json.quoteString(ee.getMessage()) + "},\"status\":500}";
+            channel.sendResponse(new BytesRestResponse(RestStatus.INTERNAL_SERVER_ERROR, "application/json", message));
         }
+    }
+    
+    /**
+     * Return a response through a RestChannel.
+     * This method is used by the action classes in org.opensearch.plugin.zentity.
+     *
+     * @param channel The REST channel to return the response through.
+     * @param content The XContentBuilder to process and return.
+     */
+    protected static void sendResponse(RestChannel channel, XContentBuilder content) {
+        sendResponse(channel, RestStatus.OK, StringsUtil.toString(content));
+    }
+    
+    /**
+     * Return a response through a RestChannel.
+     * This method is used by the action classes in org.opensearch.plugin.zentity.
+     *
+     * @param channel The REST channel to return the response through.
+     * @param json    The JSON string to process and return.
+     */
+    protected static void sendResponse(RestChannel channel, String json) {
+        sendResponse(channel, RestStatus.OK, json);
+    }
+    
+    /**
+     * Return a response through a RestChannel.
+     * This method is used by the action classes in org.opensearch.plugin.zentity.
+     *
+     * @param channel The REST channel to return the response through.
+     * @param statusCode The HTTP status code.
+     * @param json    The JSON string to process and return.
+     */
+    protected static void sendResponse(RestChannel channel, RestStatus statusCode, String json) {
+        channel.sendResponse(new BytesRestResponse(statusCode, "application/json", json));
     }
 } 
